--- a/package.json
+++ b/package.json
@@ -185,6 +185,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "electron": "^1.6.11",
     "electron-debug": "^1.1.0",
     "font-awesome": "^4.7.0",
     "history": "^4.6.1",
